# qt4-action-editor

./: ActionsDialog.cpp  ActionsDialog.h  ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  README.md  main.cpp
